improve the app to perform dynamic search by name

--- a/my-mongo-app/app/index.html
+++ b/my-mongo-app/app/index.html
@@ -20,26 +20,35 @@
     }
 </style>
 <script>
-    (async function init() {
-        const cont = document.getElementById('container');
-        const response = await fetch('http://localhost:3000/fetch-data', {
+    async function init() {
+        const nameInput = document.getElementById('name').value;
+
+        // Construct the URL with the query parameter
+        const url = `http://localhost:3000/fetch-data?name=${encodeURIComponent(nameInput)}`;
+
+        // Make the fetch request with the modified URL
+        const response = await fetch(url, {
             method: "GET",
             headers: {
-              'Accept': 'application/json',
-              'Content-Type': 'application/json'
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
             }
         });
         const jsonResponse = await response.json();
         document.getElementById('dynamic').textContent = JSON.stringify(jsonResponse);
-    })();
+    }
 </script>
 <body>
     <div class='container' id='container'>
         <h1>Welcome to this Super Sophisticated App</h1>
         <span>Some static data:  </span><h3 id="static">this is hard-coded in index.html</h3>
         <hr />
-        <span>Data from MongoDB:  </span><h3 id="dynamic"></h3>
+        <span>Search by name:  </span>
+        <input id="name" />
+        <button id="searchButton" onclick="init()">Search</button>
         <hr />
+        <span>Data from MongoDB:  </span><h3 id="dynamic"></h3>
     </div>
+    
 </body>
 </html>
